--- a/index.html
+++ b/index.html
@@ -9,15 +9,17 @@
   <div class="login">
     <span>
       <p>
-      okay, okay
+        this in for my little cutie brother
+        <br>
+        are you my brother?
       </p>
     </span>
     <div class="login-btn">
       <button class="login-btn-yes" >
-      whatever
+        yea
       </button>
       <button class="login-btn-no">
-      m'kay
+        nu uh
       </button>
     </div>
   </div>
