--- a/index.html
+++ b/index.html
@@ -15,17 +15,16 @@
       </p>
     </span>
     <div class="login-btn">
-      <button class="login-btn-yes" >
-        yea
-      </button>
-      <button class="login-btn-no">
+      <a href="page1.html">
+        <button class="login-btn-yes" >
+          yea
+        </button>
+      </a>
+      <button class="login-btn-no" onclick="alert('who are you!? get out!')>
         nu uh
       </button>
     </div>
   </div>
-  <button class="back-btn">
-  back?
-  </button>
 
 </body>
 </html>
