--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           yea
         </button>
       </a>
-      <button class="login-btn-no" onclick="alert('who are you!? get out!')>
+      <button class="login-btn-no" onclick="alert('who are you!? get out!')" >
         nu uh
       </button>
     </div>
