--- a/page1.html
+++ b/page1.html
@@ -13,21 +13,22 @@
       </p>
     </span>
     <div class="login-btn">
-      <a href="">
-        <button class="login-btn-yes" >
+      <button class="login-btn-yes" >
+        <a href="page2.html">
           yea
-        </button>
-      </a>
-      <button class="login-btn-no" onclick="alert('you sneaking')">
+        </a>
+      </button>
+      <button class="login-btn-no" type="button" onclick="alert('you sneaking')">
         nu uh
       </button>
     </div>
   </div>
-  <a href="index.html">
-    <button class="back-btn">
-      back?
-    </button>
-  </a>
+  <button class="back-btn" >
+    <a href="index.html">
+      yea
+    </a>
+  </button>
+  
 
 </body>
 </html>
