--- a/page1.html
+++ b/page1.html
@@ -25,11 +25,10 @@
   </div>
   <button class="back-btn" >
     <a href="index.html">
-      yea
+      back
     </a>
   </button>
   
 
 </body>
-</html>
 </html>
