--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <link href="style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>happy birthday yey</title>
+  <link href="style.css" rel="stylesheet">
 </head>
 <body>
 
@@ -10,23 +13,21 @@
   </div>
   
   <div class="login">
-    <span>
-      <p>
-        this in for my little cutie brother
-        <br>
-        are you my brother?
-      </p>
-    </span>
-    <div class="login-btn">
-      <button class="login-btn-yes" >
-        <a href="page1.html">
-          yea
-        </a>
+    <p>
+      this in for my little cutie brother
+      <br>
+      are you my brother?
+    </p>
+    <form class="login-btn-yes" action="page1.html">
+      <button>
+        yea
       </button>
-      <button class="login-btn-no" type="button" onclick="alert('who are you!? get out!')" >
+    </form>
+    <form class="login-btn-no">
+      <button type="button" onclick="alert('who are you!? get out!')" >
         nu uh
       </button>
-    </div>
+    </form>
   </div>
 
 </body>
