--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
       <br>
       are you my brother?
     </p>
-    <form class="login-btn-yes" action="page1.html">
+    <form class="login-btn" action="page1.html">
       <button>
         yea
       </button>
-          <button type="button" onclick="alert('who are you!? get out!')" >
+      <button type="button" onclick="alert('who are you!? get out!')" >
       nu uh
-    </button>
+      </button>
     </form>
   </div>
 
