--- a/page5.html
+++ b/page5.html
@@ -1,5 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>happy birthday yey</title>
+  <link href="style.css" rel="stylesheet">
+</head>
 <body>
 
   <div class="-">
