--- a/page1.html
+++ b/page1.html
@@ -18,22 +18,20 @@
         are you sure?
       </p>
     </span>
-    <div class="login-btn">
-      <button class="login-btn-yes" >
-        <a href="page2.html">
-          yea
-        </a>
+    <form class="login-btn" action="page1.html" name="am-brother">
+      <button>
+        yea
       </button>
-      <button class="login-btn-no" type="button" onclick="alert('you sneaking')">
+      <button type="button" onclick="alert('you sneaking')" name="am-brother">
         nu uh
       </button>
-    </div>
+    </form>
   </div>
-  <button class="back-btn" >
-    <a href="index.html">
+  <form class="back-btn" action="index.html">
+    <button name="back">
       back?
-    </a>
-  </button>
+    </button>
+  </form>
   
 
 </body>
