--- a/page1.html
+++ b/page1.html
@@ -22,7 +22,7 @@
       <button>
         yea
       </button>
-      <button type="button" onclick="alert('you sneaking')" name="am-brother">
+      <button type="button" onclick="alert('you sneaking')" name="not-brother">
         nu uh
       </button>
     </form>
