--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
       are you my brother?
     </p>
     <form class="login-btn" action="page1.html">
-      <button>
+      <button name="am-brother">
         yea
       </button>
-      <button type="button" onclick="alert('who are you!? get out!')" >
+      <button type="button" onclick="alert('who are you!? get out!')" name="not-brother">
       nu uh
       </button>
     </form>
