--- a/page1.html
+++ b/page1.html
@@ -18,8 +18,8 @@
         are you sure?
       </p>
     </span>
-    <form class="login-btn" action="page1.html" name="am-brother">
-      <button>
+    <form class="login-btn" action="page2.html">
+      <button  name="am-brother">
         yea
       </button>
       <button type="button" onclick="alert('you sneaking')" name="not-brother">
