--- a/page2.html
+++ b/page2.html
@@ -13,27 +13,23 @@
   </div>
   
   <div class="login">
-    <span>
-      <p>
-        i'm not sure
-      </p>
-    </span>
-    <div class="login-btn">
-      <button class="login-btn-no" type="button" onclick="alert('got you')">
-        what do you mean??
+    <p>
+      i'm not sure
+    </p>
+    <form class="login-btn" action="page3.html">
+      <button type="button" onclick="alert('got you')" name="not-brother">
+        what do you mean??? 
       </button>
-      <button class="login-btn-yes" >
-        <a href="page3.html">
-          nu uh, you not.
-        </a>
+      <button  name="am-brother">
+        nu uh, you not
       </button>
-    </div>
+    </form>
   </div>
-  <button class="back-btn" >
-    <a href="page1.html">
+  <form class="back-btn" action="page1.html">
+    <button name="back">
       back?
-    </a>
-  </button>
+    </button>
+  </form>
   
 
 </body>
