--- a/page3.html
+++ b/page3.html
@@ -13,29 +13,23 @@
   </div>
   
   <div class="login">
-    <span>
-      <p>
-        okay, okay
-      </p>
-    </span>
-    <div class="login-btn">
-      <button class="login-btn-yes" >
-        <a href="page4.html">
-          whatever
-        </a>
+    <p>
+      okay, okay
+    </p>
+    <form class="login-btn" action="page4.html">
+      <button name="not-brother">
+        whatever
       </button>
-      <button class="login-btn-no" >
-        <a href="page4.html">
-          m'kay
-        </a>
+      <button  name="am-brother">
+        m'kay
       </button>
-    </div>
+    </form>
   </div>
-  <button class="back-btn" >
-    <a href="page2.html">
+  <form class="back-btn" action="page2.html">
+    <button name="back">
       back?
-    </a>
-  </button>
+    </button>
+  </form>
   
 
 </body>
