--- a/page4.html
+++ b/page4.html
@@ -13,29 +13,23 @@
   </div>
   
   <div class="login">
-    <span>
-      <p>
+    <p>
         who said we're done yet
-      </p>
-    </span>
-    <div class="login-btn">
-      <button class="login-btn-yes" >
-        <a href="page5.html">
-          meh
-        </a>
+    </p>
+    <form class="login-btn" action="page5.html">
+      <button name="not-brother">
+        meh
       </button>
-      <button class="login-btn-no" >
-        <a href="page5.html">
-          booo
-        </a>
+      <button  name="am-brother">
+        boooo
       </button>
-    </div>
+    </form>
   </div>
-  <button class="back-btn" >
-    <a href="page3.html">
+  <form class="back-btn" action="page3.html">
+    <button name="back">
       back?
-    </a>
-  </button>
+    </button>
+  </form>
   
 
 </body>
