--- a/page5.html
+++ b/page5.html
@@ -13,28 +13,23 @@
   </div>
   
   <div class="login">
-    <span>
-      <p>
-        mwehehehe
-      </p>
-    </span>
-    <div class="login-btn">
-      <button class="login-btn-no" type="button" onclick="alert('excuse me???')">
+    <p>
+      mwehehehe
+    </p>
+    <form class="login-btn" action="page6.html">
+      <button type="button" onclick="alert('excuse me???')" name="not-brother">
         you suck
       </button>
-      <button class="login-btn-yes" >
-        <a href="page6.html">
-          wow
-        </a>
+      <button  name="am-brother">
+        wow
       </button>
-    </div>
+    </form>
   </div>
-  <button class="back-btn" >
-    <a href="page4.html">
+  <form class="back-btn" action="page4.html">
+    <button name="back">
       back?
-    </a>
-  </button>
-  
+    </button>
+  </form>
 
 </body>
 </html>
