--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         </div>
         <div class="login">
             <p>
-                this in for my little cutie brother
+                this is for my little cutie brother
                 <br>
                 are you my brother?
             </p>
